UI Fixes: Navbar alignment on Desktop Responsivity

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -10,6 +10,7 @@
 
     .wrapper-nav {
         flex-direction: column;
+        align-items: flex-end;
         gap:30px;
 
         position: absolute;
